Fix nullptr deference in FidoRequestHandlerBase

Bug: 870193
Change-Id: Ie7131514e1cf45f958dca11df8a142ea92440cad
Reviewed-on: https://chromium-review.googlesource.com/1159992
Reviewed-by: Kim Paulhamus <kpaulhamus@chromium.org>
Commit-Queue: Jun Choi <hongjunchoi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580276}
Former-commit-id: 644319ebc83e8919a061afc9f449f8edcd7dd0b4